--- a/package.json
+++ b/package.json
@@ -20,7 +20,11 @@
   "homepage": "https://github.com/thuqnn/blog-nodejs#readme",
   "dependencies": {
     "express": "^4.17.1",
-    "express-handlebars": "^5.2.0"
+    "express-handlebars": "^5.2.0",
+    "method-override": "^3.0.0",
+    "mongoose": "^5.11.3",
+    "mongoose-slug-generator": "^1.0.4",
+    "react-scripts": "^2.1.8"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
