--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
   },
   "homepage": "https://github.com/thuqnn/blog-nodejs#readme",
   "dependencies": {
+    "es6-promise": "^4.2.8",
     "express": "^4.17.1",
     "express-handlebars": "^5.2.0",
+    "isomorphic-fetch": "^3.0.0",
     "method-override": "^3.0.0",
     "mongoose": "^5.11.3",
     "mongoose-slug-generator": "^1.0.4",
